# pico-w-template

./: .gitignore  CMakeLists.txt  init-picow-project.sh  main.c
